src/objects/NPS_Result__c.object
<CustomObject>
    <description>Created for Feedback Results of Medallia Survey</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>NPS_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>B2B_Care_Alert_Status__c</fullName>
        <label>CTL Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Overdue</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B2B_Care_Bounced_categories__c</fullName>
        <label>Bounced categories</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Care_Expiration_date__c</fullName>
        <label>Expiration date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>B2B_Care_Reminded_date__c</fullName>
        <label>Reminded date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case Number</description>
        <label>Case ID</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>NPS_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>NPS_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Medallia_ID__c</fullName>
        <description>this field stores the medallia id sent by medallia for the nps record</description>
        <label>Medallia ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medallia_URL__c</fullName>
        <label>Medallia URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NPS_Score__c</fullName>
        <label>NPS Score</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity ID</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Survey_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <label>Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sub_Order_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Order ID</label>
        <referenceTo>csord__Solution__c</referenceTo>
        <relationshipLabel>NPS Results</relationshipLabel>
        <relationshipName>NPS_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Status__c</fullName>
        <label>Survey Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>NPS Result</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Survey Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPS Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>